Revert "Cart Functionalities added"
This reverts commit 9cbf37ca3490e5c50ed311f8d60101b055eb4640.